--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-file(GLOB SOURCES "src/*.cpp")
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS 
+    "${PROJECT_SOURCE_DIR}/src/**/*.cpp"
+    "${PROJECT_SOURCE_DIR}/src/*.cpp"
+    )
 
 add_executable(TextAdventure ${SOURCES})
 
